--- a/piano.html
+++ b/piano.html
@@ -24,6 +24,10 @@
     </header>
 
     <main>
+        <div class="breadcrumb">
+            <li class='breadcrumb-item'><a href='#'>Inicio</a></li>
+            <li class='breadcrumb-item active' aria-current='page'>Clases de piano</li>  
+        </div>
         <div class="title-piano darkblue-bg rounded-border"><h2 class="font-graduate">Piano</h2></div>
 
         <section class="piano">
