--- a/index_inicio.html
+++ b/index_inicio.html
@@ -109,7 +109,7 @@
             <p>Genta Mateo Kamekawa & Cristina Romero</p>
         </div>
     </footer>
-    <script src="./script.js"></script>
+    <script src="./script_inicio.js"></script>
 
 </body>
 </html
