--- a/index_piano.html
+++ b/index_piano.html
@@ -27,7 +27,7 @@
             <li class='breadcrumb-item'><a href='#'>Inicio</a></li>
             <li class='breadcrumb-item active' aria-current='page'>Clases de piano</li>  
         </div>
-        <div class="title-piano darkblue-bg rounded-border"><h2 class="font-graduate">Piano</h2></div>
+        <div class="title-piano darkblue-bg rounded-border"><h2><p class="font-graduate">Piano</p></h2></div>
         <section class="piano">
             <section class="piano-btns">
                 <div class="key-help rounded-border">
