Quitar notas, arreglar sonido, cambiar nombre de carpeta imgcris y empezar responsive con movil

--- a/index_piano.html
+++ b/index_piano.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nota a nota - Piano</title>
     <link rel="stylesheet" href="./css/style_piano.css">
-    <link rel="stylesheet" href="./css/style_inicio.css">
     <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
 </head>
 
 <body>
     <header>
         <div class="logo-container">
-            <img class="logo" src="./imgcris/logo_notanota.png" alt="#">
+            <img class="logo" src="./img/logo_notanota.png" alt="#">
             <p class="Nombre-web">Nota a Nota</p>
         </div>
         <nav class="menu">
@@ -44,7 +43,7 @@
     
                 <div class="char-box purple-bg rounded-border">
                     <img src="" alt="character">
-                    <div class="char-text darkblue-bg rounded-border"><p class="font-graduate">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+                    <div class="char-text darkblue-bg rounded-border"><p class="font-graduate">Lorem ipsum dolor sit amet.</p></div>
                 </div>
             </section>
 
@@ -116,7 +115,7 @@
         </div>
     </footer>
 
-    <script src="./js/script-mateo.js"></script>
+    <script src="./js/script-piano.js"></script>
 </body>
 
 </html>
