Hotfix de landing piano

--- a/index_inicio.html
+++ b/index_inicio.html
@@ -36,7 +36,7 @@
         </div>
         <div class="choose-instrument-block">
             <div id="piano-class-btn">
-                <a href="./piano.html">
+                <a href="./index_piano.html">
                 <img src="imgcris/dibujo-piano.png" alt="tocar el piano" />
                 <h3> Clases de piano</h3>
                 <p>aprende a tocar el piano</p>
